<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/time_shift_date_change_text"
        android:layout_width="235dp"
        android:layout_height="46dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="600dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="31 декабря 2021"
        android:textAlignment="center"
        android:textColor="@color/purple_500"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.12" />

    <Button
        android:id="@+id/time_shift_change_save_button"
        android:layout_width="159dp"
        android:layout_height="63dp"
        android:layout_marginStart="250dp"
        android:layout_marginTop="600dp"
        android:layout_marginEnd="50dp"
        android:text="Сохранить"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/time_shift_change_cancel_button"
        android:layout_width="142dp"
        android:layout_height="54dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="607dp"
        android:layout_marginEnd="80dp"
        android:background="@color/white"
        android:text="Отменить"
        android:textColor="@color/black"
        app:iconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/time_shift_change_save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:rippleColor="@color/white" />

    <EditText
        android:id="@+id/time_shift_change_start_edit"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="111dp"
        android:layout_marginEnd="130dp"
        android:ems="10"
        android:inputType="time"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_shift_change_start_text" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="109dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="5dp"
        android:text="Тип дня"
        android:textColor="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toTopOf="@+id/time_shift_change_day_type_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_shift_date_change_text"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/time_shift_change_day_type_spinner"
        style="@style/Widget.AppCompat.Spinner"
        android:layout_width="212dp"
        android:layout_height="46dp"
        android:layout_marginLeft="136dp"
        android:layout_marginEnd="78dp"
        android:entries="@array/dayType"
        android:spinnerMode="dialog"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_shift_date_change_text"
        app:layout_constraintVertical_bias="0.32" />

    <TextView
        android:id="@+id/time_shift_change_start_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="10dp"
        android:text="Начало"
        android:textColor="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toTopOf="@+id/time_shift_change_start_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_shift_change_day_type_spinner" />

    <TextView
        android:id="@+id/time_shift_change_end_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="111dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="10dp"
        android:text="Конец"
        android:textColor="@android:color/secondary_text_dark"
        app:layout_constraintBottom_toTopOf="@+id/time_shift_change_end_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_shift_change_start_edit"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/time_shift_change_end_edit"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginStart="111dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="210dp"
        android:ems="10"
        android:inputType="time"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_shift_change_end_text" />

</androidx.constraintlayout.widget.ConstraintLayout>