<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/time_shift_date_text"
        android:layout_width="235dp"
        android:layout_height="46dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="600dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="31 декабря 2021"
        android:textAlignment="center"
        android:textColor="#3F51B5"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/time_shift_time_end"
        android:layout_width="117dp"
        android:layout_height="62dp"
        android:layout_marginEnd="68dp"
        android:enabled="true"
        android:fontFamily="sans-serif-black"
        android:text="17:00"
        android:textAlignment="textStart"
        android:textColor="#009688"
        android:textSize="38sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_shift_time_separator"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_shift_time_start"
        android:layout_width="115dp"
        android:layout_height="61dp"
        android:layout_marginStart="74dp"
        android:layout_marginEnd="8dp"
        android:enabled="true"
        android:fontFamily="sans-serif-black"
        android:text="8:00"
        android:textAlignment="textEnd"
        android:textColor="#009688"
        android:textSize="38sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/time_shift_time_separator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_shift_time_separator"
        android:layout_width="30dp"
        android:layout_height="51dp"
        android:layout_marginEnd="7dp"
        android:enabled="true"
        android:text="—"
        android:textColor="#009688"
        android:textSize="38sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/time_shift_time_end"
        app:layout_constraintStart_toEndOf="@+id/time_shift_time_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/time_shift_type_day"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="90dp"
        android:fontFamily="sans-serif-medium"
        android:text="Выходной день"
        android:textAlignment="center"
        android:textColor="#F44336"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.67"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time_shift_date_text" />

    <ImageView
        android:id="@+id/time_shift_edit_image"
        android:layout_width="48dp"
        android:layout_height="49dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="666dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/time_shift_date_text"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_edit" />

</androidx.constraintlayout.widget.ConstraintLayout>